--- a/2. Basics & Core Concepts - DOM Interaction with Vue/basics-assignment-3-problem/index.html
+++ b/2. Basics & Core Concepts - DOM Interaction with Vue/basics-assignment-3-problem/index.html
@@ -14,20 +14,16 @@
   </head>
   <body>
     <header>
-      <h1>Vue Events</h1>
+      <h1>Reactivity in Action</h1>
     </header>
-    <section id="events">
-      <h2>Events in Action</h2>
-      <button @click="add(5)">Add 5</button>
-      <button @click="reduce(5)">Remove 5</button>
-      <p>Result: {{ counter }}</p>
-      <input type="text" v-model="name">
-      <button @click="clearName" >Reset Input</button>
-      <p>Your Name: {{fullName}}</p>
-      <form @submit.prevent="onSumbit">
-        <input type="text" >
-        <button>Sign Up</button>
-      </form>
+    <section id="assignment">
+      <button @click="addFive()">Add 5</button>
+      <button @click="addOne()">Add 1</button>
+      <!-- 1) Connect the buttons and calculate a value (a number) -->
+      <!-- Show "Not there yet" until you reach a result of exactly 37 -->
+      <!-- Show "Too much!" if the result is greater than 37 -->
+      <p>Result: {{result}}</p>
+      <!-- 2) Watch for changes in "result" and reset the value to 0 after 5 seconds -->
     </section>
   </body>
 </html>
